# apdfl-cplusplus-samples

./: .gitignore  CMakeLists.txt  Jenkinsfile  Public_Repo_Update.py  README.md  conandata.yml  conanfile.py  conanfile.txt  dlproject.yaml  mkenv.py  requirements.in  tasks.py
All/: All_DatalogicsFE_64Bit.sln  All_Datalogics_32Bit.sln  All_Datalogics_64Bit.sln  All_Datalogics_ARM64.sln  GNUmakefile  build_run_all.bat  build_run_all_mac.sh  paths.rel  run_all_DL_samples_mac.sh
Annotations/: README.md
Annotations/CreateAnnotations/: CreateAnnotations.cpp  CreateAnnotations.vcxproj  CreateAnnotations_32Bit.sln  CreateAnnotations_64Bit.sln  CreateAnnotations_ARM64.sln  Makefile
Annotations/FlattenAnnotations/: FlattenAnnotations.cpp  FlattenAnnotations.vcxproj  FlattenAnnotations_32Bit.sln  FlattenAnnotations_64Bit.sln  FlattenAnnotations_ARM64.sln  Makefile
ContentCreation/: README.md
ContentCreation/AddArt/: AddArt.cpp  AddArt.vcxproj  AddArt_32Bit.sln  AddArt_64Bit.sln  AddArt_ARM64.sln  Makefile
ContentCreation/AddAttachments/: AddAttachments.cpp  AddAttachments.vcxproj  AddAttachments_32Bit.sln  AddAttachments_64Bit.sln  AddAttachments_ARM64.sln  Makefile
ContentCreation/AddContent/: AddContent.cpp  AddContent.vcxproj  AddContent_32Bit.sln  AddContent_64Bit.sln  AddContent_ARM64.sln  Makefile
ContentCreation/AddHeaderFooter/: AddHeaderFooter.cpp  AddHeaderFooter.vcxproj  AddHeaderFooter_32Bit.sln  AddHeaderFooter_64Bit.sln  AddHeaderFooter_ARM64.sln  Makefile
ContentCreation/CreateBookmarks/: CreateBookmarks.cpp  CreateBookmarks.vcxproj  CreateBookmarks_32Bit.sln  CreateBookmarks_64Bit.sln  CreateBookmarks_ARM64.sln  makefile
ContentCreation/CreateDocument/: CreateDocument.cpp  CreateDocument.vcxproj  CreateDocument_32Bit.sln  CreateDocument_64Bit.sln  CreateDocument_ARM64.sln  Makefile
ContentCreation/CreateLayers/: CreateLayers.cpp  CreateLayers.vcxproj  CreateLayers_32Bit.sln  CreateLayers_64Bit.sln  CreateLayers_ARM64.sln  Makefile
ContentCreation/CreateTransparency/: CreateTransparency.cpp  CreateTransparency.vcxproj  CreateTransparency_32Bit.sln  CreateTransparency_64Bit.sln  CreateTransparency_ARM64.sln  Makefile
ContentExtraction/: README.md
ContentExtraction/CopyContent/: CopyContent.cpp  CopyContent.vcxproj  CopyContent_32Bit.sln  CopyContent_64Bit.sln  CopyContent_ARM64.sln  Makefile
ContentExtraction/ExtractAttachments/: ExtractAttachments.cpp  ExtractAttachments.vcxproj  ExtractAttachments_32Bit.sln  ExtractAttachments_64Bit.sln  ExtractAttachments_ARM64.sln  Makefile
ContentExtraction/ExtractFonts/: ExtractFonts.cpp  ExtractFonts.vcxproj  ExtractFonts_32Bit.sln  ExtractFonts_64Bit.sln  ExtractFonts_ARM64.sln
ContentModification/: README.md
ContentModification/AddBookmarks/: AddBookmarks.cpp  AddBookmarks.vcxproj  AddBookmarks_32Bit.sln  AddBookmarks_64Bit.sln  AddBookmarks_ARM64.sln  Makefile
ContentModification/AddDocumentInformation/: AddDocumentInformation.cpp  AddDocumentInformation.vcxproj  AddDocumentInformation_32Bit.sln  AddDocumentInformation_64Bit.sln  AddDocumentInformation_ARM64.sln  Makefile
ContentModification/AddLinks/: AddLinks.cpp  AddLinks.vcxproj  AddLinks_32Bit.sln  AddLinks_64Bit.sln  AddLinks_ARM64.sln  Makefile
ContentModification/AddPageNumbers/: AddPageNumbers.cpp  AddPageNumbers.vcxproj  AddPageNumbers_32Bit.sln  AddPageNumbers_64Bit.sln  AddPageNumbers_ARM64.sln  Makefile
ContentModification/AddQRCode/: AddQRCode.cpp  AddQRCode.vcxproj  AddQRCode_32Bit.sln  AddQRCode_64Bit.sln  AddQRCode_ARM64.sln  Makefile
ContentModification/AddTextWatermark/: AddTextWatermark.cpp  AddTextWatermark.vcxproj  AddTextWatermark_32Bit.sln  AddTextWatermark_64Bit.sln  AddTextWatermark_ARM64.sln  Makefile
ContentModification/AttachMimeToPDF/: AttachMimeToPDF.cpp  AttachMimeToPDF.vcxproj  AttachMimeToPDF_32Bit.sln  AttachMimeToPDF_64Bit.sln  AttachMimeToPDF_ARM64.sln
ContentModification/EmbedFonts/: EmbedFonts.cpp  EmbedFonts.h  EmbedFonts.vcxproj  EmbedFonts_32Bit.sln  EmbedFonts_64Bit.sln  EmbedFonts_ARM64.sln
ContentModification/FlattenTransparency/: FlattenTransparency.cpp  FlattenTransparency.vcxproj  FlattenTransparency_32Bit.sln  FlattenTransparency_64Bit.sln  FlattenTransparency_ARM64.sln  Makefile
ContentModification/ImportPages/: ImportPages.cpp  ImportPages.vcxproj  ImportPages_32Bit.sln  ImportPages_64Bit.sln  ImportPages_ARM64.sln
ContentModification/MergeAcroforms/: MergeAcroforms.cpp  MergeAcroforms.h  MergeAcroforms.vcxproj  MergeAcroforms_32Bit.sln  MergeAcroforms_64Bit.sln  MergeAcroforms_ARM64.sln
ContentModification/MergeDocuments/: Makefile  MergeDocuments.cpp  MergeDocuments.vcxproj  MergeDocuments_32Bit.sln  MergeDocuments_64Bit.sln  MergeDocuments_ARM64.sln
ContentModification/PDFMakeOCGVisible/: PDFMakeOCGVisible.cpp  PDFMakeOCGVisible.vcxproj  PDFMakeOCGVisible_32Bit.sln  PDFMakeOCGVisible_64Bit.sln  PDFMakeOCGVisible_ARM64.sln
ContentModification/PDFUncompress/: PDFUncompress.cpp  PDFUncompress.h  PDFUncompress.vcxproj  PDFUncompress_32Bit.sln  PDFUncompress_64Bit.sln  PDFUncompress_ARM64.sln
ContentModification/SplitPDF/: Makefile  SplitPDF.cpp  SplitPDF.vcxproj  SplitPDF_32Bit.sln  SplitPDF_64Bit.sln  SplitPDF_ARM64.sln
Display/DisplayPDEContent/: DisplayPDEContent.cpp  DisplayPDEContent.h  DisplayPDEContent.vcxproj  DisplayPDEContent_32Bit.sln  DisplayPDEContent_64Bit.sln  DisplayPDEContent_ARM64.sln  dpcColor.cpp  dpcDict.cpp  (+9 more)
DocumentConversion/: README.md
DocumentOptimization/: README.md
FileSystem/: README.md
Forms/: README.md
Images/: README.md
OCR/: README.md
Printing/: README.md
Security/: README.md
Text/: README.md
_Common/: APDFLDoc.cpp  APDFLDoc.h  InitializeLibrary.cpp  InitializeLibrary.h  README.md  SampleFileUtils.cpp  SampleFileUtils.h  ScopeGuard.h  SetupPrintParams.cpp  SetupPrintParams.h  TextExtract.cpp  TextExtract.h
_Input/: AcroForm_data.xfdf  DynamicXFA_data.xdp  README.md  StaticXFA_data.xdp
dlutils/: Info.plist  armv8linux.mak  armv8mac.mak  common.mak  i80386linux.mak  rs6000aix.mak  sparcsolaris.mak
utils/: env.py
(+385 files in other folders)
